fix waveform alignment

--- a/components/neonRoad/player/ui.module.css
+++ b/components/neonRoad/player/ui.module.css
@@ -16,6 +16,8 @@
 }
 
 .audioWaveForm {
+    display: flex;
+    align-items: center;
     margin-right: var(--main-spacing);
 }
 
